Bug 112946 - Pivot table: Missing selector for a row field after RT in Calc
Summary: Pivot table: Missing selector for a row field after RT in Calc
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Tamás Zolnai
URL:
Whiteboard: target:6.0.0
Keywords:
Depends on:
Blocks: Pivot-Table-XLSX
  Show dependency treegraph
 
Reported: 2017-10-06 17:30 UTC by Tamás Zolnai
Modified: 2017-10-07 14:46 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Simple pivot table in outline view (11.89 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2017-10-06 17:30 UTC, Tamás Zolnai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2017-10-06 17:30:28 UTC
Description:
In MSO there are more view types (oultine, tabular, compact). It seems to me LO calc only supports outline mode. In the attached test document I added a simple pivot table in outline view in Excel. If I round trip it in Calc and reopen it in Excel, a popup button / selector is missing in G1 cell for field2 pivot table field. It seems the issue is that the outline mode is not correctly exported by Calc.

Steps to Reproduce:
1. Open attached test document in Calc
2. Resave it to an XLSX file
3. Open it in Excel and refresh the table

Actual Results:  
When opening the document, the selector is missing. After an update it switches to compact mode.

Expected Results:
Selector button should be there after importing the document. After a refresh the same outline layout should be displayed as in Calc or in the original test document.


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 6.3; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.100 Safari/537.36
Comment 1 Tamás Zolnai 2017-10-06 17:30:47 UTC
Created attachment 136813 [details]
Simple pivot table in outline view
Comment 2 Commit Notification 2017-10-06 20:16:10 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ad439ded005cffd525ffe874f535fca7a4da1f49

tdf#112946: Pivot table: Missing selector for a row field after RT in Calc

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.