tdf#112946: Pivot table: Missing selector for a row field after RT in Calc

We need to explicitly set compact flags to false, since true is
the default. It seems MSO prefers compact mode, when the file
contains colliding mode flags.

Change-Id: Ib311f1cf44345be294e6c6607c227c2baa0fb693