sc/source/filter/excel/xepivotxml.cxx
@@ -674,6 +674,8 @@ void XclExpXmlPivotTables::SavePivotTableXml( XclExpXmlStream& rStrm, const ScDP
         XML_indent, ToPsz10(false),
         XML_outline, ToPsz10(true),
         XML_outlineData, ToPsz10(true),
+        XML_compact, ToPsz10(false),
+        XML_compactData, ToPsz10(false),
         FSEND);
 
     // NB: Excel's range does not include page field area (if any).
@@ -723,6 +725,7 @@ void XclExpXmlPivotTables::SavePivotTableXml( XclExpXmlStream& rStrm, const ScDP
         {
             pPivotStrm->singleElement(XML_pivotField,
                 XML_showAll, ToPsz10(false),
+                XML_compact, ToPsz10(false),
                 FSEND);
             continue;
         }
@@ -733,6 +736,7 @@ void XclExpXmlPivotTables::SavePivotTableXml( XclExpXmlStream& rStrm, const ScDP
         {
             pPivotStrm->singleElement(XML_pivotField,
                 XML_showAll, ToPsz10(false),
+                XML_compact, ToPsz10(false),
                 FSEND);
             continue;
         }
@@ -742,6 +746,7 @@ void XclExpXmlPivotTables::SavePivotTableXml( XclExpXmlStream& rStrm, const ScDP
             pPivotStrm->singleElement(XML_pivotField,
                 XML_dataField, ToPsz10(true),
                 XML_showAll, ToPsz10(false),
+                XML_compact, ToPsz10(false),
                 FSEND);
 
             continue;
@@ -810,6 +815,7 @@ void XclExpXmlPivotTables::SavePivotTableXml( XclExpXmlStream& rStrm, const ScDP
         if (!bHasDefaultSubtotal)
             pAttList->add(XML_defaultSubtotal, ToPsz10(false));
 
+        pAttList->add( XML_compact, ToPsz10(false));
         sax_fastparser::XFastAttributeListRef xAttributeList(pAttList);
         pPivotStrm->startElement(XML_pivotField, xAttributeList);
 
